k8s-app/php/php-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: php-app
spec:
  selector:
    app: php-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
