k8s-app/php/php-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: php-app
  template:
    metadata:
      labels:
        app: php-app
    spec:
      volumes:
        - name: app-code
          configMap:
            name: php-app-code
      containers:
      - name: php
        image: php:8.2-apache
        ports:
          - containerPort: 80
        volumeMounts:
          - name: app-code
            mountPath: /var/www/html
---
apiVersion: v1
kind: Service
metadata:
  name: php-app
spec:
  selector:
    app: php-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
