k8s-app/php/php-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: php-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: php-app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: php-app
            port:
              number: 80
